tests/negative/scope/class-imported-twice/err.expected
ERROR:
The name `Foo` had already been bound at test.smol:3:14-3:17:
         2 | 
         3 | import alpha:Foo;
           |              ^^^
         4 | import alpha:Foo;

However, it was imported again at test.smol:4:14-4:17:
         3 | import alpha:Foo;
         4 | import alpha:Foo;
           |              ^^^
         5 | 
